5-creates view to display data

--- a/techreviewproj/techreviewapp/templates/base.html
+++ b/techreviewproj/techreviewapp/templates/base.html
@@ -16,11 +16,11 @@
 <a class="navbar-brand" href="{% url 'index' %}">Tech Reviews</a> 
 </div> 
 <ul class="nav navbar-nav"> 
-<li>Dummy</li>
-<li>Dummy</li> 
+    <li><a href="{% url 'types' %}">Tech Types</a></li>
+    <li>Dummy</li> 
 </ul> 
-</div> 
-</nav> 
+</div> <!-- end container-fluid-->
+</nav> <!-- end navbar-default -->
 <div class="container-fluid"> 
 {% block content %} 
 
