6 view and details

--- a/techreviewproj/techreviewapp/templates/base.html
+++ b/techreviewproj/techreviewapp/templates/base.html
@@ -17,7 +17,7 @@
 </div> 
 <ul class="nav navbar-nav"> 
     <li><a href="{% url 'types' %}">Tech Types</a></li>
-    <li>Dummy</li> 
+    <li><a href="{% url 'products' %}">Products</a></li> 
 </ul> 
 </div> <!-- end container-fluid-->
 </nav> <!-- end navbar-default -->
