--- a/techreviewproj/techreviewapp/templates/base.html
+++ b/techreviewproj/techreviewapp/templates/base.html
@@ -18,6 +18,8 @@
 <ul class="nav navbar-nav"> 
     <li><a href="{% url 'types' %}">Tech Types</a></li>
     <li><a href="{% url 'products' %}">Products</a></li> 
+    <li><a href="{% url 'newproduct' %}">Add Product</a></li>
+    <li><a href="{% url 'newreview' %}">Add Review</a></li>
 </ul> 
 </div> <!-- end container-fluid-->
 </nav> <!-- end navbar-default -->
