adds login requirements and authentication

--- a/techreviewproj/techreviewapp/templates/base.html
+++ b/techreviewproj/techreviewapp/templates/base.html
@@ -20,6 +20,8 @@
     <li><a href="{% url 'products' %}">Products</a></li> 
     <li><a href="{% url 'newproduct' %}">Add Product</a></li>
     <li><a href="{% url 'newreview' %}">Add Review</a></li>
+    <li><a href="{% url 'login' %}">Login</a></li>
+    <li><a href="{% url 'logout' %}">Logout</a></li>
 </ul> 
 </div> <!-- end container-fluid-->
 </nav> <!-- end navbar-default -->
